--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ text-decoration: aliceblue;
 }
 
 .button {
-  background-color: #4CAF50; /* Green */
+  background-color: #4CAF50; 
   border: none;
   color: white;
   padding: 15px 32px;
